--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,14 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.redis.om</groupId>
-			<artifactId>redis-om-spring</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<type>jar</type>
 		</dependency>
 
 		<!--	api endpoint test with Swagger	-->
