--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.data.redis.host=localhost
 spring.data.redis.port=6379
 
 logging.level.root=debug
-logging.level.kartaca=debug
+logging.level.bidding=debug
