--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>me</groupId>
 	<artifactId>kartaca-app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>kartaca-app</name>
+	<name>bidding-app</name>
 	<description>Kartaca internship application project by Nihat Yalcin</description>
 	<properties>
 		<java.version>17</java.version>
