--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "bidding-frontend"]
-	path = bidding-frontend
+	path = src/main/webapp/reactapp
 	url = https://github.com/nhtY/bidding-frontend.git
