--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+spring.cache.type = redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
-
-logging.level.root=debug
-logging.level.bidding=debug
