--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 spring.cache.type = redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
+logging.level.bidding = debug
+logging.level.web = debug
